--- a/estore/src/app/app.component.html
+++ b/estore/src/app/app.component.html
@@ -5,6 +5,7 @@
       <li><a routerLink="/">Home</a></li>
       <li><a routerLink="/addtocart">Add to Cart</a></li>
       <li><a routerLink="/cart">Cart</a></li>
+      <li><a [routerLink]="['/lists']">Products</a></li> 
       <li style="margin-left:auto"><a routerLink="/signin">Sign In</a></li>
       <li><a routerLink="/register">Register</a></li>
     </ul>
